# API-Gateway

./: .env.example  README.md  pyproject.toml
src/: main.py
src/api/dtos/: __init__.py  events.py  responses.py  users.py
src/api/enums/: __init__.py  sentiment.py
src/api/routers/: __init__.py  events.py  users.py
src/api/routes/: __init__.py  users.py
src/api/schemas/: __init__.py  sentiment.py  topic.py  topic_profile.py
src/api/transformers/: __init__.py  events.py  users.py
src/core/: config.py
src/databases/olap/models/: __init__.py  base.py  event.py
src/databases/oltp/documents/: __init__.py  mixins.py  user.py  user_topic_profile.py
src/databases/oltp/schemas/: __init__.py  entity.py  sentiment.py  topic.py
src/dtos/: __init__.py  aggregated_topic_attributes.py  events.py  topic_profiles.py  users.py
src/repositories/: __init__.py  aggregated_topic_attributes.py  events.py  topic_profiles.py  topic_proflies.py  users.py
src/schemas/: __init__.py  entities.py  entity.py  keyword.py  keywords.py  sentiment.py  topic_profile.py  topic_profiles.py
src/streaming/routers/: __init__.py  content.py  events.py  topic_attributes.py  topic_profile.py
src/utils/: aggregated_topic_attributes.py  manipulations.py  olap.py  topic_profiles.py  weights.py
tests/api/: test_routers_users.py
tests/api/routers/: test_events.py  test_users.py
tests/repositories/: test_events.py  test_topic_profiles.py  test_users.py
tests/streaming/: test_routers_events.py
tests/streaming/routers/: test_content.py  test_events.py  test_topic_attributes.py
tests/utils/: test_manipulations.py  test_olap.py  test_topic_profiles.py  test_weights.py
