[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "fastapi-pagination>=0.13.1",
    "motor>=3.7.0",
    "faststream[kafka]>=0.5.40",
    "asynch>=0.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
show-fixes = true

[tool.mypy]
strict = true
ignore_missing_imports = true
implicit_optional = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
